order-saga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-saga
  labels:
    app: order-saga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-saga
  template:
    metadata:
      labels:
        app: order-saga
    spec:
      containers:
      - name: order-saga
        image: ghcr.io/scalable-a-team/order-service-saga
        args: [ "-A", "tasks", "worker", "--loglevel=info", "-Q", "order", "-c", "1"]
      imagePullSecrets:
      - name: gh-regcred
