order-service-buyer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-buyer
  labels:
    app: order-service-buyer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-buyer
  template:
    metadata:
      labels:
        app: order-service-buyer
    spec:
      containers:
      - name: order-service-buyer
        image: ghcr.io/scalable-a-team/order-service
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: gh-regcred
