product-deploy-seller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-seller
  labels:
    app: product-service-seller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service-seller
  template:
    metadata:
      labels:
        app: product-service-seller
    spec:
      containers:
      - name: product-service-seller
        image: ghcr.io/scalable-a-team/elastic-products/elastic-products
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: gh-regcred
