product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: ghcr.io/scalable-a-team/elastic-products
        ports:
          - containerPort: 5000
      imagePullSecrets:
        - name: gh-regcred
