user-saga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-saga
  labels:
    app: user-saga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-saga
  template:
    metadata:
      labels:
        app: user-saga
    spec:
      containers:
      - name: user-saga
        image: ghcr.io/scalable-a-team/user-service-saga
        args: [ "-A", "tasks", "worker", "--loglevel=info", "-Q", "user", "-c", "1"]
      imagePullSecrets:
      - name: gh-regcred
