chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chat-service
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: ghcr.io/scalable-a-team/chat-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
      imagePullSecrets:
        - name: gh-regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat-service
  name: chat-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: chat-service
