frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: ghcr.io/scalable-a-team/frontend:latest
          imagePullPolicy: Never
          name: client
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
