order-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db
  labels:
    app: ordr-db
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: order-db
