order-service-buyer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-buyer
  annotations:
    konghq.com/plugins: buyer-acl
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: order-service-buyer
  type: ClusterIP
