order-service-seller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-seller
  annotations:
    konghq.com/plugins: seller-acl
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: order-service-seller
  type: ClusterIP
