order-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  # annotations:
  #   konghq.com/plugins: app-jwt-public
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: order-service
  type: ClusterIP
