product-seller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-seller
  annotations:
    konghq.com/plugins: seller-acl
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: product-service-seller
  type: ClusterIP
