product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-public
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: product-service-public
  type: ClusterIP
