user-db-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-citus-coordinator
  labels:
    app: user-citus-coordinator
    component: citus
spec:
  selector:
    app: user-citus-coordinator
  ports:
  - port: 5432
    name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-citus-coordinator
spec:
  selector:
    matchLabels:
      app: user-citus-coordinator
  serviceName: user-citus-coordinator
  replicas: 1
  template:
    metadata:
      labels:
        app: user-citus-coordinator
        component: citus
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        image: citusdata/citus:11.0.2-alpine
        args: ['postgres', '-c', 'hba_file=/etc/postgres/pg_hba.conf']
        lifecycle:
          postStart:
            exec:
              command:
                - sh
                - -c
                - |
                   until pg_isready -U postgres --timeout=1; do sleep 2; done;
                   
                   host_node_name="${HOSTNAME}.${POD_NAMESPACE}.svc.cluster.local";
                   psql -c "SELECT * from citus_set_coordinator_host('${host_node_name}', 5432);";

                   timeout 1m sh -c "until nslookup user-citus-worker-0.user-citus-workers.default.svc.cluster.local > /dev/null; do sleep 2; done;";
                   nslookup user-citus-worker-0.user-citus-workers.default.svc.cluster.local > /dev/null || { echo Name not ready; kill -9 1; exit 1; }
                   psql 'user=postgres' -c "SELECT * from citus_add_node('user-citus-worker-0.user-citus-workers.default.svc.cluster.local', 5432);";

                   timeout 1m sh -c "until nslookup user-citus-worker-1.user-citus-workers.default.svc.cluster.local > /dev/null; do sleep 2; done;";
                   nslookup user-citus-worker-1.user-citus-workers.default.svc.cluster.local > /dev/null || { echo Name not ready; kill -9 1; exit 1; }
                   psql 'user=postgres' -c "SELECT * from citus_add_node('user-citus-worker-1.user-citus-workers.default.svc.cluster.local', 5432);";

                   timeout 1m sh -c "until nslookup user-citus-worker-2.user-citus-workers.default.svc.cluster.local > /dev/null; do sleep 2; done;";
                   nslookup user-citus-worker-2.user-citus-workers.default.svc.cluster.local > /dev/null || { echo Name not ready; kill -9 1; exit 1; }
                   psql 'user=postgres' -c "SELECT * from citus_add_node('user-citus-worker-2.user-citus-workers.default.svc.cluster.local', 5432);";

                   psql 'user=postgres' -c "SELECT rebalance_table_shards();";
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: storage
          mountPath: /var/lib/postgresql/data
        - name: pg-hba
          mountPath: "/etc/postgres"
          readOnly: true
        livenessProbe:
          exec:
            command:
              - 'pg_isready'
              - '-U'
              - 'postgres'
              - '--timeout=5'
              - '--quiet'
          initialDelaySeconds: 60
      volumes:
        - name: pg-hba
          configMap:
            name: pg-hba

  volumeClaimTemplates:
  - metadata:
      name: storage
      labels:
        app: user-citus-coordinator
        component: citus
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
