user-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    app: user-db
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: user-db
