ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: default
  annotations:
    konghq.com/plugins: app-jwt-public

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /api/order/seller
            pathType: Prefix
            backend:
              service:
                name: order-service-seller
                port:
                  number: 8000
          - path: /api/order/buyer
            pathType: Prefix
            backend:
              service:
                name: order-service-buyer
                port:
                  number: 8000
          - path: /api/product/create
            pathType: Prefix
            backend:
              service:
                name: product-service-seller
                port:
                  number: 8000
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product-service-public
                port:
                  number: 8000
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
          # - path: /api/messages
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: order-service-seller
          #       port:
          #         number: 8000
